--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         <div class="hero-wrapper">
             <h1><em>FREELANCE </em>WEB DESIGNER <em>&</em> SOFTWARE DEVELOPER</h1>
             <div class="hero-wrapper-section-2">
-                <h3>FREELANCE WEB DESIGNER HARNESSING THE POWER OF DESIGN TO ACHIEVE ONLINE GOALS.</h3>
+                <h3>I'M A FREELANCE WEB DESIGNER WHO SPECIALIZES IN CREATING FUNCTIONAL AND VISUALLY APPEALING WEBSITES TO HELP BUSINESSES ACHIEVE THEIR ONLINE GOALS.</h3>
                 <div class="hero-wrapper-section-2-1">
-                    <p>I create successful digital presences for innovative startups and established businesses with cutting-edge UI/UX design and web development.</p>
+                    <p>Stunning. Seamless. Impactful. Using cutting-edge UI/UX design and web development, I craft digital presences that help startups and established businesses achieve their digital goals.</p>
                     <a href="contact.html" class="contact_button">
                         <p>Contact</p>
                         <div class="contact_button-images">
@@ -147,8 +147,8 @@
                <div class="profile-pic"></div>
             </div>
             <div class="about-col2-2">
-                <p class="about-paragraph-1">Welcome my world! I am Daniel, a dedicated and creative freelance digital designer striving to create projects that I can be proud of. I am a member of the Awwwards young jury 2023, Webflow professional partner and I specialise in delivering digital services including bespoke web design and Webflow development.</p>
-                <p class="about-paragraph-2">With a passion for technology and a focus on web design and Webflow development, I create beautiful digital experiences that drive value for my clients and their customers. I believe in taking a collaborative approach to my work and I work closely with my clients to ensure that every project meets their unique needs and exceeds their expectations.</p>
+                <p class="about-paragraph-1">Passionate. Creative. Dedicated. I'm Jean-Luc, a freelance digital designer committed to creating projects that I'm proud of. I constantly strive for excellence and aim to exceed expectations. Let's collaborate and bring your unique vision to life, creating a digital experience that sets you apart from the rest.</p>
+                <p class="about-paragraph-2">I specialize in creating bespoke web designs that drive value for clients and their customers. With a collaborative approach, I work closely with clients to exceed their expectations. Let's bring your vision to life.</p>
                 <!--button to about page. content: "read more" style: sea contact-button -->
             </div>
             </div>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="work-col2">
                     <h1>A FEW <em>SELECTED WORKS</em></h1>
-                    <p>My web design projects showcases the exceptional work that I have delivered. Have a look into my portfolio, highlighting the diverse range of web design projects for various industries.</p>
+                    <p>Take a look at my portfolio and see the exceptional web design projects I've delivered. With a diverse range of projects for various industries, you'll find examples of my best work.</p>
                 </div>
             </div>
             <div class="work-project-wrapper">
@@ -228,7 +228,7 @@
                 <div>
                     <div class="expertise-title">Expertise</div>
                     <h3>HOW CAN <em style="font-style: normal ;">I HELP</em></h3>
-                    <p>I specialise in offering bespoke web design and Webflow development services to small and big businesses alike. My aim is to help businesses establish a strong online presence and connect with their target audience effectively.</p>
+                    <p>My aim is to create exceptional digital experiences that help businesses achieve their goals. I specialize in web design, utilizing my expertise in HTML, CSS, and JavaScript to craft custom websites that showcase the unique value of each business. Whether it's building a new website from scratch or revamping an existing one, I'm committed to delivering high-quality work that meets my clients' specific needs.</p>
                     <div class="expertise-links">
                         <a href="contact.html" class="contact_button">
                             <p>Read more</p>
@@ -254,55 +254,55 @@
                             <div class="expertise-card-row1">
                                 <div class="expertise-card-col1">
                                     <div class="expertise-card-icon">
-                                        <img src="images/icons/code-1115-svgrepo-com.svg" alt="">
+                                        <img src="images/icons/design-svgrepo-com (1).svg" alt="">
                                     </div>
                                 </div>
                                 <div class="expertise-card-col2">
-                                    <h4 class="expertise-card-title">WEB DESIGN</h4>
+                                    <h4 class="expertise-card-title">Responsive Design (UI/UX)</h4>
                                     <div class="expertise-card-traits">
-                                        <div class="expertise-card-trait1">UI/UX Design</div>
-                                        <div class="expertise-card-trait2">Re-designs</div>
-                                        <div class="expertise-card-trait3">Landing pages</div>
+                                        <div class="expertise-card-trait1">Responsive</div>
+                                        <div class="expertise-card-trait2">User-friendly</div>
+                                        <div class="expertise-card-trait3">Performance</div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="expertise-card-row2">Starting a business can be challenging, but your website should not be one of them. That's where I come in. I provide thorough web design and Web development services so startups can get ahead on their way to reaching their online goals.</div>
+                            <div class="expertise-card-row2">Creating visually appealing and user-friendly interfaces that are optimized for all devices.</div>
                     </li>
                     <li class="expertise-card expertise-card2">
                             <div class="expertise-card-row1">
                                 <div class="expertise-card-col1">
                                     <div class="expertise-card-icon">
-                                        <img src="images/icons/web-development-svgrepo-com.svg" alt="">
+                                        <img src="images/icons/graphic-design-tool-svgrepo-com.svg" alt="">
                                     </div>
                                 </div>
                                 <div class="expertise-card-col2">
-                                    <h4 class="expertise-card-title">WEB DEVELOPMENT</h4>
+                                    <h4 class="expertise-card-title">Graphic Design</h4>
                                     <div class="expertise-card-traits">
-                                        <div class="expertise-card-trait2">Optimisation</div>
-                                        <div class="expertise-card-trait1">Client-first</div>
-                                        <div class="expertise-card-trait3">Functionality</div>
+                                        <div class="expertise-card-trait2">creative</div>
+                                        <div class="expertise-card-trait1">memorable</div>
+                                        <div class="expertise-card-trait3">professional</div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="expertise-card-row2">Starting a business can be challenging, but your website should not be one of them. That's where I come in. I provide thorough web design and Web development services so startups can get ahead on their way to reaching their online goals.</div>
+                            <div class="expertise-card-row2">Crafting visually stunning logos, illustrations, and other brand assets that capture the essence of your business.</div>
                     </li>
                     <li class="expertise-card expertise-card3">
                         <div class="expertise-card-row1">
                             <div class="expertise-card-col1">
                                 <div class="expertise-card-icon">
-                                    <img src="images/icons/rocket-svgrepo-com.svg" alt="">
+                                    <img src="images/icons/web-development-svgrepo-com.svg" alt="">
                                 </div>
                             </div>
                             <div class="expertise-card-col2">
-                                <h4 class="expertise-card-title">HELPING STARTUPS</h4>
+                                <h4 class="expertise-card-title">App Development</h4>
                                 <div class="expertise-card-traits">
-                                    <div class="expertise-card-trait3">Visual identity</div>
-                                    <div class="expertise-card-trait2">Web design</div>
-                                    <div class="expertise-card-trait1">Web development</div>
+                                    <div class="expertise-card-trait3">Custom</div>
+                                    <div class="expertise-card-trait2">innovative</div>
+                                    <div class="expertise-card-trait1">scalable</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="expertise-card-row2">Starting a business can be challenging, but your website should not be one of them. That's where I come in. I provide thorough web design and Web development services so startups can get ahead on their way to reaching their online goals.</div>
+                        <div class="expertise-card-row2"> Designing and developing mobile and web applications that are intuitive, user-friendly, and optimized for performance.</div>
                     </li>
                     <li class="expertise-card expertise-card4">
                         <div class="expertise-card-row1">
@@ -312,17 +312,17 @@
                                 </div>
                             </div>
                             <div class="expertise-card-col2">
-                                <h4 class="expertise-card-title">WEBAPP DEVELOPMENT</h4>
+                                <h4 class="expertise-card-title">Branding and Identity</h4>
                                 <div class="expertise-card-traits">
-                                    <div class="expertise-card-trait3">meticulousness</div>
-                                    <div class="expertise-card-trait1">front-end</div>
-                                    <div class="expertise-card-trait2">back-end</div>
+                                    <div class="expertise-card-trait3">Consistent</div>
+                                    <div class="expertise-card-trait1">authentic</div>
+                                    <div class="expertise-card-trait2">impactful</div>
                                 </div>
                             </div>
                         </div>
                         <div class="expertise-card-row2">
                             <p>
-                                I create custom web applications tailored to the unique needs of businesses across various industries. With expertise in HTML, CSS, and JavaScript, my solutions are designed to streamline your business processes and help you achieve your goals effectively.
+                                Helping you define and articulate your brand's personality, values, and unique selling proposition through cohesive branding strategies.
                             </p>
                         </div>
                     </li>
